# ntfier

./: .commitlintrc.json  .gitignore  .prototools  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  cliff.toml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  update.json
.github/: cliff.toml  release.yml
.github/workflows/: ci.yml  release-manual.yml  release.yml
.husky/: pre-commit
scripts/: gen_icons.py  generate-update-json.js
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2026-02-01-000000_initial_schema/: down.sql  up.sql
src-tauri/migrations/2026-02-19-000000_add_favorites/: down.sql  up.sql
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs  notifications.rs  settings.rs  subscriptions.rs  sync.rs  update.rs
src-tauri/src/db/: connection.rs  mod.rs  models.rs  schema.rs  types.rs
src-tauri/src/db/queries/: mod.rs  notifications.rs  servers.rs  settings.rs  subscriptions.rs
src-tauri/src/models/: mod.rs  notification.rs  server_url.rs  settings.rs  subscription.rs
src-tauri/src/services/: connection_manager.rs  credential_manager.rs  image_cache.rs  mod.rs  ntfy_client.rs  sync_service.rs  tray_manager.rs  update_service.rs
ui/: .cta.json  biome.json  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: routeTree.gen.ts  styles.css
ui/src/components/common/: ErrorBoundary.tsx  ThemeProvider.tsx  UpdateToast.tsx
ui/src/components/dialogs/: AddSubscriptionDialog.tsx  ConfirmDialog.tsx  ServerConfigForm.tsx  SettingsDialog.tsx
ui/src/components/dialogs/settings/: AppearanceTab.tsx  BehaviorTab.tsx  NotificationsTab.tsx  index.ts
ui/src/components/layout/: AppLayout.tsx  Header.tsx  SidebarFooter.tsx  SidebarTopicItem.tsx  SidebarTopicList.tsx
ui/src/components/notifications/: EmptyState.tsx  MarkdownContent.tsx  NotificationActions.tsx  NotificationAttachments.tsx  NotificationCard.tsx  NotificationHeader.tsx  NotificationList.tsx  NotificationTags.tsx  PriorityBadge.tsx
ui/src/components/ui/: checkbox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  error-card.tsx  inline-error.tsx  lazy-image.tsx  radio-group.tsx  scroll-area.tsx  setting-checkbox.tsx  sheet.tsx
ui/src/context/: AppContext.tsx
ui/src/data/: mock-data.ts
ui/src/hooks/: index.ts  useErrorHandler.ts  useLazyImage.ts  useNotifications.ts  useServerForm.ts  useTauriEvent.ts
ui/src/lib/: constants.ts  error-classification.ts  markdownPreprocessor.ts  tauri.ts  utils.ts
ui/src/routes/: __root.tsx  image-preview.tsx  index.tsx
ui/src/themes/: applyTheme.ts  index.ts  storage.ts  systemPreference.ts  utils.ts
ui/src/themes/presets/: blue.ts  dark.ts  green.ts  index.ts  lavender.ts  light.ts  mint.ts  purple.ts  rose.ts  sand.ts  sky.ts
ui/src/types/: bindings.ts  ntfy.ts
