[package]
name = "ntfier"
version = "0.1.0"
description = "Desktop notification client for ntfy"
authors = [""]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ntfier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket - use rustls instead of native-tls
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HTTP client - use rustls instead of native-tls
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
url = "2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.8"

# Secure credential storage
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Type-safe bindings between Rust and TypeScript
specta = "=2.0.0-rc.22"
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "0.0.9"
