[package]
name = "ntfier"
version = "0.1.0"
description = "Desktop notification client for ntfy"
authors = [""]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ntfier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket - use rustls instead of native-tls
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HTTP client - use rustls instead of native-tls
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
url = "2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.8"

# Secure credential storage
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Type-safe bindings between Rust and TypeScript
specta = "=2.0.0-rc.22"
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "0.0.9"

# Workspace lints configuration
[lints.rust]
# Deny unsafe code
unsafe_code = "deny"
# Warn on missing docs for public items (optional, enable when ready)
# missing_docs = "warn"

[lints.clippy]
# Clippy lint groups
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Deny dangerous patterns
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
redundant_closure_for_method_calls = "allow"
unnecessary_debug_formatting = "allow"
if_not_else = "allow"
match_same_arms = "allow"
significant_drop_tightening = "allow"
manual_let_else = "allow"
bool_to_int_with_if = "allow"
struct_field_names = "allow"
unnecessary_wraps = "allow"
manual_strip = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
match_bool = "allow"
const_is_empty = "allow"
